<resources>
    <string name="app_name">Quiz App</string>
    <string name="question">Which car brand does the displayed logo belong to?</string>
    <string name="first_answer">first_answer</string>
    <string name="second_answer">second_answer</string>
    <string name="third_answer">third_answer</string>
    <string name="fourth_answer">fourth_answer</string>
    <string name="submit">submit</string>
    <string name="example">e.g. John Kowalski</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter">Please enter your name</string>
    <string name="start">Start</string>
    <string name="finish">FINISH</string>
    <string name="score">SCORE</string>
    <string name="about_app">About app</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="result">Result</string>
    <string name="trophy_image">trophy image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
</resources>