<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_bg"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        tools:text="Which car brand does the displayed logo belong to??" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="130dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/quiz_image"
        tools:src="@drawable/volkswagen_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/pbProgressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="10"
            android:minHeight="50dp"
            android:progress="0" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="14sp"
            tools:text="0/10" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:columnCount="2"
        android:rowCount="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TextView
                android:id="@+id/tvOptionOne"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tvOptionThree"
                app:layout_constraintEnd_toStartOf="@+id/tvOptionTwo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/first_answer" />

            <TextView
                android:id="@+id/tvOptionTwo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tvOptionFour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvOptionOne"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/second_answer" />

            <TextView
                android:id="@+id/tvOptionThree"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvOptionFour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOptionOne"
                tools:text="@string/third_answer" />

            <TextView
                android:id="@+id/tvOptionFour"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvOptionThree"
                app:layout_constraintTop_toBottomOf="@+id/tvOptionTwo"
                tools:text="@string/fourth_answer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/auburn"
        android:backgroundTint="@color/auburn"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>